--- a/configs/models.yaml
+++ b/configs/models.yaml
@@ -87,6 +87,16 @@ openrouter:
     base_url: https://openrouter.ai/api/v1
     model_identifier: deepseek/deepseek-r1-0528-qwen3-8b:free
     streaming: True
+  llama_instruct:
+    api_key_env_var: OPEN_ROUTER_API_KEY
+    base_url: https://openrouter.ai/api/v1
+    model_identifier: meta-llama/llama-3.3-8b-instruct:free
+    streaming: True
+  gemini_preview:
+    api_key_env_var: OPEN_ROUTER_API_KEY
+    base_url: https://openrouter.ai/api/v1
+    model_identifier: google/gemini-2.5-pro-preview
+    streaming: True
 
 
 anthropic:
